updated to hex_bin and added x and y labels

--- a/src/group_42_ca_ej.Rmd
+++ b/src/group_42_ca_ej.Rmd
@@ -17,9 +17,9 @@ ces <- read_csv(here("data", "ces3demographics.csv")) %>%
   clean_names()
 ```
 
-
 ```{r}
 ggplot(data = ces, aes(x = white_percent , y = ces_3_0_score)) +
-  geom_point()
+  geom_hex() +
+  labs(x = "% White Population (2010)", y = "CES 3.0 Score")
 ```
 
